git link and cleanup of GA

--- a/core.html
+++ b/core.html
@@ -106,19 +106,8 @@
       })
     });
   </script>
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-36635429-1']);
-    _gaq.push(['_trackPageview']);
-  </script>
 </head>
 <body>
   <div id='container'></div>
-  <script type="text/javascript">
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
+  <a href='https://github.com/Maksims/cells' target='_blank' id='git'></a>
 </body>
